fix(tabs): Fixes Contrast Left Tabs and Responsive Tabs
[Finishes #101630542]

BREAKING CHANGE (scss) $tab-responsive-color is now $neutral-3 instead
of $neutral-4 and $tab-responsive-active-color is now $brand-5 instead
of $brand-8

--- a/src/pivotal-ui/components/pui-variables.scss
+++ b/src/pivotal-ui/components/pui-variables.scss
@@ -734,8 +734,8 @@ $nav-tabs-title-font-size:                  16px;
 
 // Responsive tabs
 $tab-responsive-bg:             $shadow-4;
-$tab-responsive-color:          $neutral-4;
-$tab-responsive-active-color:   $brand-8;
+$tab-responsive-color:          $neutral-3;
+$tab-responsive-active-color:   $brand-5;
 $tab-responsive-radius:         $border-radius-large;
 $tab-responsive-pane-padding:   15px;
 
